--- a/Future_Craft_Digital_02.csproj
+++ b/Future_Craft_Digital_02.csproj
@@ -220,6 +220,7 @@
     <Content Include="Assets\img\services-left-image\creative.png" />
     <Content Include="Assets\img\services-left-image\developer.png" />
     <Content Include="Assets\img\services-left-image\flower-top.png" />
+    <Content Include="Assets\img\services-left-image\service-image4.png" />
     <Content Include="Assets\img\services-left-image\service-left-main-pic.png" />
     <Content Include="Assets\img\services-left-image\small-monitor.png" />
     <Content Include="Assets\img\services-left-image\small-top.png" />
@@ -372,6 +373,7 @@
     <Content Include="Views\Home\SMM.cshtml" />
     <Content Include="Views\Home\DigitalMarketing.cshtml" />
     <Content Include="Views\Home\SEO.cshtml" />
+    <Content Include="Views\Home\Ecommerce.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
