Updated Home + Blogs Page
- I added a 'See all' button at the blog section in the Home page.
-  I added initial contents in the Blog page.
- Insight and Testimonial pages are now working and routing to the right pages.

WIP
- Make the Blog Page. Make it dynamic and can route to another page.

--- a/Future_Craft_Digital_02.csproj
+++ b/Future_Craft_Digital_02.csproj
@@ -379,6 +379,9 @@
     <Content Include="Views\Home\Ecommerce.cshtml" />
     <Content Include="Views\Home\POS.cshtml" />
     <None Include="Views\Home\.editorconfig" />
+    <Content Include="Views\Home\Blogs.cshtml" />
+    <Content Include="Views\Home\Insights.cshtml" />
+    <Content Include="Views\Home\Testimonials.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
