--- a/Future_Craft_Digital_02.csproj
+++ b/Future_Craft_Digital_02.csproj
@@ -382,6 +382,7 @@
     <Content Include="Views\Home\SoftDesignAndDev.cshtml" />
     <Content Include="Views\Home\Marketing.cshtml" />
     <Content Include="Views\Home\Outsourcing.cshtml" />
+    <Content Include="Views\Home\Cart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
