--- a/Future_Craft_Digital_02.csproj
+++ b/Future_Craft_Digital_02.csproj
@@ -149,6 +149,7 @@
     <Content Include="Assets\img\banner-image\flower-top-big.png" />
     <Content Include="Assets\img\banner-image\flower-top.png" />
     <Content Include="Assets\img\banner-image\headphone.png" />
+    <Content Include="Assets\img\banner-image\hosting-static-main.png" />
     <Content Include="Assets\img\banner-image\keyboard.png" />
     <Content Include="Assets\img\banner-image\main-pic.png" />
     <Content Include="Assets\img\banner-image\man.png" />
