style: added why choose us section in outsourcing page

--- a/Future_Craft_Digital_02.csproj
+++ b/Future_Craft_Digital_02.csproj
@@ -152,6 +152,7 @@
     <Content Include="Assets\img\banner-image\hosting-static-main.png" />
     <Content Include="Assets\img\banner-image\keyboard.png" />
     <Content Include="Assets\img\banner-image\main-pic.png" />
+    <Content Include="Assets\img\banner-image\main-static.png" />
     <Content Include="Assets\img\banner-image\man.png" />
     <Content Include="Assets\img\banner-image\pen.png" />
     <Content Include="Assets\img\banner-image\table.png" />
