--- a/Future_Craft_Digital_02.csproj
+++ b/Future_Craft_Digital_02.csproj
@@ -191,18 +191,14 @@
     <Content Include="Assets\img\marketing\sm.png" />
     <Content Include="Assets\img\marketing\sm2.png" />
     <Content Include="Assets\img\partner-img\partner-1.png" />
-    <Content Include="Assets\img\partner-img\partner-10.png" />
     <Content Include="Assets\img\partner-img\partner-2.png" />
     <Content Include="Assets\img\partner-img\partner-3.png" />
-    <Content Include="Assets\img\partner-img\partner-4.png" />
     <Content Include="Assets\img\partner-img\partner-5.png" />
     <Content Include="Assets\img\partner-img\partner-6.png" />
     <Content Include="Assets\img\partner-img\partner-7.png" />
     <Content Include="Assets\img\partner-img\partner-hover1.png" />
-    <Content Include="Assets\img\partner-img\partner-hover10.png" />
     <Content Include="Assets\img\partner-img\partner-hover2.png" />
     <Content Include="Assets\img\partner-img\partner-hover3.png" />
-    <Content Include="Assets\img\partner-img\partner-hover4.png" />
     <Content Include="Assets\img\partner-img\partner-hover5.png" />
     <Content Include="Assets\img\partner-img\partner-hover6.png" />
     <Content Include="Assets\img\partner-img\partner-hover7.png" />
@@ -308,18 +304,14 @@
     <Content Include="fonts\Flaticon.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Scripts\bootstrap.bundle.js" />
-    <Content Include="Scripts\bootstrap.bundle.min.js" />
-    <Content Include="Scripts\bootstrap.esm.js" />
-    <Content Include="Scripts\bootstrap.esm.min.js" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\bootstrap.min.js.map" />
-    <Content Include="Scripts\bootstrap.js.map" />
-    <Content Include="Scripts\bootstrap.esm.min.js.map" />
-    <Content Include="Scripts\bootstrap.esm.js.map" />
-    <Content Include="Scripts\bootstrap.bundle.min.js.map" />
-    <Content Include="Scripts\bootstrap.bundle.js.map" />
+    <Content Include="fonts\boxicons.eot" />
+    <Content Include="fonts\boxicons.ttf" />
+    <Content Include="fonts\boxicons.woff" />
+    <Content Include="fonts\boxicons.woff2" />
+    <Content Include="fonts\Flaticon.eot" />
+    <Content Include="fonts\Flaticon.ttf" />
+    <Content Include="fonts\Flaticon.woff" />
+    <Content Include="fonts\Flaticon.woff2" />
     <Content Include="Content\bootstrap.rtl.min.css.map" />
     <Content Include="Content\bootstrap.rtl.css.map" />
     <Content Include="Content\bootstrap.min.css.map" />
@@ -336,14 +328,19 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
-    <Content Include="fonts\boxicons.eot" />
-    <Content Include="fonts\boxicons.ttf" />
-    <Content Include="fonts\boxicons.woff" />
-    <Content Include="fonts\boxicons.woff2" />
-    <Content Include="fonts\Flaticon.eot" />
-    <Content Include="fonts\Flaticon.ttf" />
-    <Content Include="fonts\Flaticon.woff" />
-    <Content Include="fonts\Flaticon.woff2" />
+    <None Include="Properties\PublishProfiles\FutureCraftDigital0220230808100033 - Web Deploy.pubxml" />
+    <Content Include="Scripts\bootstrap.bundle.js" />
+    <Content Include="Scripts\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\bootstrap.esm.js" />
+    <Content Include="Scripts\bootstrap.esm.min.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\bootstrap.min.js.map" />
+    <Content Include="Scripts\bootstrap.js.map" />
+    <Content Include="Scripts\bootstrap.esm.min.js.map" />
+    <Content Include="Scripts\bootstrap.esm.js.map" />
+    <Content Include="Scripts\bootstrap.bundle.min.js.map" />
+    <Content Include="Scripts\bootstrap.bundle.js.map" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -378,9 +375,7 @@
     <Content Include="Views\Home\Software.cshtml" />
     <Content Include="Views\Home\Windows.cshtml" />
     <Content Include="Views\Home\Rental.cshtml" />
-    <Content Include="Views\Home\WebDesign.cshtml" />
     <Content Include="Views\Home\DigitalMarketing.cshtml" />
-    <Content Include="Views\Home\Ecommerce.cshtml" />
     <None Include="Views\Home\.editorconfig" />
     <Content Include="Views\Home\Blogs.cshtml" />
     <Content Include="Views\Home\Insights.cshtml" />
