--- a/Future_Craft_Digital_02.csproj
+++ b/Future_Craft_Digital_02.csproj
@@ -146,10 +146,12 @@
     <Content Include="Assets\img\banner-image\code.png" />
     <Content Include="Assets\img\banner-image\dekstop.png" />
     <Content Include="Assets\img\banner-image\dot.png" />
+    <Content Include="Assets\img\banner-image\fcd-logo.png" />
     <Content Include="Assets\img\banner-image\flower-top-big.png" />
     <Content Include="Assets\img\banner-image\flower-top.png" />
     <Content Include="Assets\img\banner-image\headphone.png" />
     <Content Include="Assets\img\banner-image\keyboard.png" />
+    <Content Include="Assets\img\banner-image\logo-square.png" />
     <Content Include="Assets\img\banner-image\main-pic.png" />
     <Content Include="Assets\img\banner-image\man.png" />
     <Content Include="Assets\img\banner-image\pen.png" />
